[package]
name = "route_match"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
description = "A context-agnostic http routing utility"
license = "Apache-2.0"

[dependencies]
route_match_macros = { path = "route_match_macros" }

[workspace]
members = [ "examples/hyper_server","route_match_macros"]
default-members = ["route_match_macros"]
