[package]
name = "route_match"
version = "0.2.0"
edition = "2021"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
description = "A context-agnostic http routing utility"
license = "Apache-2.0"

repository = "https://github.com/spencerkohan/route_match"
documentation = "https://docs.rs/route_match"

[dependencies]
route_match_macros = "0.2.0"

[workspace]
members = [ ".", "examples/hyper_server","route_match_macros"]
default-members = [".", "route_match_macros"]

[patch.crates-io]
route_match_macros = { path = "route_match_macros" }
route_match = { path = "." }
