[package]
name = "openapi_tools"
version = "0.2.2"
edition = "2024"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
description = "Tools for working with OpenAPI specs"
license = "Apache-2.0"
publish = true

repository = "https://github.com/spencerkohan/route_match"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }


openapiv3-extended = "6.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.34"
