[package]
name = "route_match_macros"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
description = "The route_match macro implementation"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["extra-traits", "full"] }
