[package]
name = "route_match_macros"
version = "0.3.1"
edition = "2021"
authors = ["Spencer Kohan <spencerkohan@gmail.com>"]
description = "The route_match macro implementation"
license = "Apache-2.0"
publish = true

repository = "https://github.com/spencerkohan/route_match/tree/main/route_match_macro"
documentation = "https://docs.rs/route_match_macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["extra-traits", "full"] }
