[package]
name = "hyper_server"
version = "0.2.1"
edition = "2021"
publish = false

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

route_match = { path = "../.." }
